spacing issue on extremely small devices

--- a/src/components/Body/index.css
+++ b/src/components/Body/index.css
@@ -54,6 +54,10 @@
 .body-title-head {
     font-family: 'Sacramento', cursive;
     font-size: 200%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .artists {
